# rudo

./: Cargo.toml  README.md  cargo.toml  cli.rs  command.rs  config.rs  lib.rs  meson.build  rudo.conf  rust-rudo.spec  rust2rpm.conf
.github/: dependabot.yml
.github/workflows/: rust.yml
conf/: rudo.conf
man/: rudo.md
src/: auth.rs  cli.rs  command.rs  config.rs  journal.rs  lib.rs  main.rs  meson.build  session.rs  tty.rs  user.rs
